<resources>
    <string name="app_name">Employee Payroll System</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">admin@payroll.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_employees">Employees</string>
    <string name="menu_add_employee">Add Employee</string>
    <string name="menu_vehicle">Add Vehicle</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_contactus">Contact Us</string>

    <string name="login_email">admin@payroll.com</string>
    <string name="login_password">admin123</string>

    <string name="homefragment_message">Welcome to the Employee Payroll System. select your choice to navigate from navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
