<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_employees"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_employees" />
        <item
            android:id="@+id/nav_addEmpoyee"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_add_employee" />
        <item
            android:id="@+id/nav_add_vehicle"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_vehicle" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_aboutus" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_contactus" />
        </menu>
    </item>

</menu>
