<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.employeepayrollsystem.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_employees"
        android:name="com.example.employeepayrollsystem.ui.Employees.EmployeesFragment"
        android:label="@string/menu_employees"
        tools:layout="@layout/fragment_employees" />

    <fragment
        android:id="@+id/nav_addEmpoyee"
        android:name="com.example.employeepayrollsystem.ui.add_employee.AddEmployeeFragment"
        android:label="@string/menu_add_employee"
        tools:layout="@layout/fragment_add_employee" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.employeepayrollsystem.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.employeepayrollsystem.ui.Logout.LogoutFragment"
        android:label="@string/menu_employees"
        />
</navigation>